--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -41,8 +41,8 @@ Codii is available for the Linux, Windows, and Mac OS operating systems.
 Having any Java 8 version is not enough. +
 This app will not work with earlier versions of Java 8.
 +
-.  Download the latest `addressbook.jar` link:{repoURL}/releases[here].
-.  Copy the file to the folder you want to use as the home folder for your Address Book.
+.  Download the latest `codii.jar` link:{repoURL}/releases[here].
+.  Copy the file to the folder you want to use as the home folder for your Codii.
 .  Double-click the file to start the app. The GUI, as seen in Figure 1.1 below, should appear in a few seconds.
 +
 image::UiStartUp.PNG[width="790"]
