UserGuide.adoc: add tags for my commands

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -185,6 +185,7 @@ by typing this command, you will be able to find both `john` and `John Doe`.
 * `find Betsy Tim John` +
 By typing this command, you will be able to find any person having names `Betsy`, `Tim`, or `John`
 
+// tag::findtag[]
 === Finding a person's tag : `findtag`
 
 This command will help you find contacts whose tags contain any of the given keywords. +
@@ -205,6 +206,7 @@ By typing this command, you will be able to find any person having tag `friends`
 
 * `findtag owesMoney neighbours friends` +
 By typing this command, you will be able to find any person having tags `owesMoney`, `neighbours`, or `friends`.
+// end::findtag[]
 
 === Selecting a person : `select`
 
@@ -316,6 +318,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
 
+// tag::themeslist[]
 === Listing all themes : `themeslist`
 
 This command shows a list of all themes that is available to you in The Myth's Book. +
@@ -325,7 +328,9 @@ Format: `themeslist`
 You should be able to see the result of using `themeslist` in the command result box.
 
 The displayed result should look like the figure below.
+// end::themeslist[]
 
+// tag::switch[]
 === Switching themes : `switch`
 
 This command helps you to switch the current theme to your favourite theme. +
@@ -346,7 +351,7 @@ Examples:
 
 You should be able to see the result of using `switch INDEX`
 as seen in the figure below.
-
+// end::switch[]
 
 === Checking for birthdays : `birthdays`
 
@@ -432,6 +437,7 @@ Eg. 09/12/2017 will not be accepted as a valid date.
 
 // end::addevent[]
 
+// tag::favouriteunfavourite[]
 === Favouriting a person : `favourite`
 
 This command helps you to favourite the specified person in the most recent listing from The Myth's Book. +
@@ -482,6 +488,7 @@ By typing `unfavourite 1`, you will be able to unfavourite the 1st person in the
 * `find Betsy` +
 `unfavourite 1` +
 By typing `unfavourite 1`, you will be able to unfavourite the 1st person in the results of the `find` command.
+// end::favouriteunfavourite[]
 
 === Accessing a person's location : `locate`
 
@@ -546,6 +553,7 @@ Figure 7.2.3
 
 // end::calendar[]
 
+// tag::brighttheme[]
 === Bright Theme
 
 UI that is of a bright colour scheme as compared to the default `Dark Theme`. +
@@ -554,6 +562,7 @@ You will be able to switch between `Bright Theme` and `Dark Theme` through the c
 image::BrightTheme.png[width="800"]
 
 link:#the-myths-book---user-guide[Back To Top]
+// end::brighttheme[]
 
 == FAQ
 
