--- a/docs/team/Jolyn.adoc
+++ b/docs/team/Jolyn.adoc
@@ -111,10 +111,12 @@ include::../UserGuide.adoc[leveloffset=2, tag=picture]
 === Other contributions
 * Added auto-selection to person that is newly added (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/123[#123])
 * Added auto-selection to person that is newly edited (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/102[#102])
+* Added a prompt text to the result display panel (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/122[#122])
 * Added the removeTag method (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/6[#6])
 * Updated the General Documentation (Pull requests https://github.com/CS2103AUG2017-W11-B2/main/pull/2[#2],
 https://github.com/CS2103AUG2017-W11-B2/main/pull/66[#66],
-https://github.com/CS2103AUG2017-W11-B2/main/pull/112[#112])
+https://github.com/CS2103AUG2017-W11-B2/main/pull/112[#112],
+https://github.com/CS2103AUG2017-W11-B2/main/pull/124[#124])
 
 endif::[]
 
