--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -42,12 +42,15 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 Make the addressbook more useful to a tourguide
 
+// tag::autocomplete[]
 === Autocomplete
 Pressing kbd:[&tab;] will attempt to autocomplete current command. Turns text red if not suitable command exists. Since v1.2
 To see parameters for a command, press tab on a complete command. Pressing tab again will remove the parameters. If the command has no parameters then the text will turn red. Since v1.3
 
 If there are multiple possible commands for a given input, i.e. 'e' could be 'edit', 'exit', or 'export', then a dropdown box will appear with the possible commands. These can be navigated using mouse or arrow keys and enter to select the desired command. Since v1.5
+// end::autocomplete[]
 
+// tag::group[]
 === Person: `group`
 Each person can now be assigned a group. The group is used to sort people into specific tours for the tourguide. Since v1.2
 
@@ -73,6 +76,7 @@ Example:
 
 * `filter none`
 * `filter trip`
+// end::group[]
 
 === Person Image: `image`
 Set and show an image for a person in the addressbook. Uses the index of a person to select them and a URL to the image path. Since v1.3. +
