--- a/docs/Themes.adoc
+++ b/docs/Themes.adoc
@@ -10,9 +10,13 @@ ifdef::env-github[]
 :tip-caption: :bulb:
 :note-caption: :information_source:
 endif::[]
-:repoURL: https://github.com/se-edu/addressbook-level4
+:repoURL: https://github.com/CS2103AUG2017-T15-B3/main
 
-By: `The Myth`      Since: `Oct 2017`      Licence: `MIT`
+By: `The Myth`      Since: `Jun 2016`      Licence: `MIT`
+
+== Introduction
+
+This themes list will provide you with the list of colour themes that is available for you in The Myth's Book.
 
 == Themes
 
